--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "axios": "^0.21.0",
     "css-loader": "^0.28.11",
     "element-ui": "^2.14.1",
+    "jquery": "^3.5.1",
     "node-sass": "^4.11.0",
     "sass-loader": "^7.3.0",
-    "swiper": "^6.3.5",
     "vue": "^2.5.2",
-    "vue-awesome-swiper": "^4.1.1",
     "vue-axios": "^3.1.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
   },
@@ -61,9 +61,10 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "swiper": "^6.3.5",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
-    "vue-lazy-load": "^0.0.7",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
@@ -82,5 +83,13 @@
     "not ie <= 8"
   ],
   "main": ".eslintrc.js",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tingmeimei0929/xiaomi-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tingmeimei0929/xiaomi-project/issues"
+  },
+  "homepage": "https://github.com/tingmeimei0929/xiaomi-project#readme"
 }
