--- a/.babelrc
+++ b/.babelrc
@@ -6,7 +6,15 @@
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
       }
     }],
+    ["babel-preset-es2015"],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"]
+  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "env": {
+    "test": {
+        "presets": ["env", "stage-2"],
+        "plugins": ["istanbul"]
+    }
+  },
+  "comments": false
 }
