--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "async-validator": "^3.5.0",
     "axios": "^0.21.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^0.28.11",
     "element-ui": "^2.14.1",
     "jquery": "^3.5.1",
@@ -21,7 +23,6 @@
     "node-sass": "^4.11.0",
     "sass-loader": "^7.3.0",
     "vue": "^2.5.2",
-    "vue-axios": "^3.1.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.4.9",
     "vuex": "^3.5.1"
@@ -36,7 +37,7 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-stage-2": "^6.24.1",
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
@@ -63,10 +64,11 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "swiper": "^6.3.5",
-    "uglifyjs-webpack-plugin": "^1.1.1",
+    "swiper": "^5.4.1",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "url-loader": "^0.5.8",
     "vue-awesome-swiper": "^4.1.1",
+    "vue-axios": "^3.2.0",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
